--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,11 @@
   ],
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/.*",
       "dest": "/index.html"
     }
   ]
 }
-
-
-
-
